--- a/cv_10.tex
+++ b/cv_10.tex
@@ -34,7 +34,7 @@
 \pagestyle{fancy}
 \begin{document}
 
-\header{charlie}{meyer}{software artist, computer scientist, open source enthusiast, tinkerer} % Your name and current job title/field
+\header{charlie}{meyer}{software artist, computer scientist, open source enthusiast} % Your name and current job title/field
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -42,15 +42,12 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
-mailing address available upon request
-Austin, Texas
-~
-630.886.7082
-~
 \href{mailto:charlie@charliemeyer.net}{charlie@charliemeyer.net}
 \href{https://charliemeyer.net}{https://charliemeyer.net}
 \href{https://www.github.com/cemeyer2}{Github}
 \href{www.linkedin.com/in/cemeyer2}{LinkedIn}
+~
+630.886.7082
 ~
 %\emph{Please do not contact me if you work for a recruiting agency.}
 \section{tongue}
@@ -93,11 +90,7 @@ Detailed achievements:
 {IBM}
 {Austin, Texas}
 {\emph{Staff Software Engineer} \\
-Responsible for Power7+ AIX bring-up including integrated system test as well as an integral member of the
-Cluster Aware AIX team, the backbone of the clustering capabilities of the IBM enterprise grade UNIX operating system,
-which is an underlying component of IBM PowerHA and VIOS SSP. As part of that team, I led the effort to maintain, refactor,
-and enhance the AIX cluster communications daemon. \\
-Detailed achievements:
+Engineer on the Cluster Aware AIX team, the backbone of the clustering capabilities of the IBM enterprise grade UNIX operating system.I led the effort to maintain, refactor, and enhance the AIX cluster communications daemon. \\
 \begin{itemize}
 \item Led the AIX effort to certify Oracle Real Application Clusters database on PowerHA
 \item Enhanced AIX clustering to scale to 32 nodes and 1024 disks per node, including parallelization of core clustering libraries
@@ -107,24 +100,13 @@ Detailed achievements:
 \end{itemize}}
 \end{entrylist}
 %------------------------------------------------
-%\begin{entrylist}
-%\entry
-%{2011-2012}
-%{IBM}
-%{Champaign, Illinois}
-%{\emph{Campus Representative} \\
-%Campus representative for the University of Illinois at Urbana-Champaign. Coordinated with IBM HR and recruiters to
-%organize events to promote IBM on campus to students across campus. Actively pursued and recommended new candidates for engineering positions.}
-%\end{entrylist}
-%------------------------------------------------
 \begin{entrylist}
 \entry
 {2010-2011}
 {IBM}
 {Austin, Texas}
-{\emph{Power Systems Test Engineer Co-op} \\
-Architected and developed an automated functional test suite composed of approximately 130 test cases for IBM Power Systems
-firmware using Rational tools, including Rational Functional Tester and Rational ClearQuest. Deployed existing and new code bases to Rational Quality Manager for usage by remote teams. Performed intensive Power Systems debugging, installs, and triage.}
+{\emph{Power Systems Firmware Engineer Co-op} \\
+Architected and developed an automated functional test suite composed of approximately 130 test cases for IBM Power Systems.}
 \end{entrylist}
 %------------------------------------------------
 \begin{entrylist}
@@ -134,30 +116,9 @@ firmware using Rational tools, including Rational Functional Tester and Rational
 {Rochester, Minnesota}
 {\emph{Power Systems Performance Co-op} \\
 Worked as a member of a team to benchmark systems, analyze performance data, develop workloads, perform
-maintenance on IBM Power Systems, and develop tools to aid in performance analysis. 
-\begin{itemize}
-\item Created an automation framework to streamline TPC-C benchmarks
-\item Developed the front-end and CL/C++ harness for a new implementation of TPC-E for IBM i
-\item Architected and developed an API to access Collection Services, PEX, JobWatcher, and DiskWatcher data from IBM i in Java
-\end{itemize}}
+maintenance on IBM Power Systems, and develop tools to aid in performance analysis. }
 \end{entrylist}
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2007-2008}
-{Solidware Technologies}
-{Champaign, Illinois}
-{\emph{Software Engineer Intern} \\
-Worked as a member of an agile team developing a J2EE web based application which performed static code analysis.} \\
-%Key responsibilities included:
-%\begin{itemize}
-%\item Developing new application functionality
-%\item End to end QA, including unit testing, integration testing, and regression testing
-%\item Writing product documentation and transforming it across a variety of mediums
-%\item Participating in product launch strategy
-%\item Translating business needs into technical requirements
-%\end{itemize}}
-\end{entrylist}
+%-----------------------------------------------
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -171,8 +132,7 @@ Worked as a member of an agile team developing a J2EE web based application whic
 {2010-2012}
 {Masters of Science {\normalfont computer science}}
 {University of Illinois, Urbana-Champaign}
-{Specialization: Software Engineering, Software Architecture, Design Patterns, Next Generation Computer Science Education \\ 
-Thesis: CoMoTo: The Collaboration Modeling Toolkit }
+{Specialization: Object oriented architecture and design}
 %------------------------------------------------
 \entry
 {2005-2010}
