--- a/cv_10.tex
+++ b/cv_10.tex
@@ -72,14 +72,13 @@ professional spanish proficiency
 {HomeAway}
 {Austin, Texas}
 {\emph{Senior Software Engineer} \\
-At HomeAway, I am a the lead software engineer on our internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I daily deal with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, and Docker among many others. \\
-Detailed achievements:
+At HomeAway, I am a senior software engineer and team lead for the internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I daily deal with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, and Docker among many others. \\
 \begin{itemize}
 \item Architected, developed, and rolled out a new internal application based on Ruby on Rails used by all engineers to accurately capture capitalizable time
-\item Architected and led a team to develop a distributed SOA-based JSON registry and dashboard framework
+\item Architected and developed a distributed microservice-based JSON registry used by a variety of applications across the organization
+\item Led the migration to and architected new solutions on AWS for the productivity engineering organization
 \item Mentored the 3 Day Startup Program sponsored by HomeAway both in Austin, TX and London, UK
-\item Architected, developed, and open-sourced the \href{https://github.com/homeaway/homeaway_api_ruby}{HomeAway Ruby SDK for the HomeAway Developer API}
-\item Open-sourced a \href{https://github.com/homeaway/homeaway-storm}{Ruby library for communicating with Apache Storm clusters} on behalf of HomeAway
+\item Architected, developed, and open-sourced the \href{https://github.com/homeaway/homeaway_api_ruby}{HomeAway Ruby SDK for the HomeAway Developer API} and \href{https://github.com/homeaway/homeaway-storm}{Ruby library for communicating with Apache Storm clusters} on behalf of HomeAway
 %\item Led and architected the quality effort to roll out a new caching infrastructure for our high traffic API based on Elasticsearch and Cassandra
 %\item Provided continual platform support to engineers and quality assurance team members across the organization
 \end{itemize}}
