--- a/cv_10.tex
+++ b/cv_10.tex
@@ -68,11 +68,19 @@ professional spanish proficiency
 %------------------------------------------------
 \begin{entrylist}
 \entry
-{2014-Present}
+{2017-Present}
+{Civitas Learning}
+{Austin, Texas}
+{\emph{Staff Software Engineer} \\
+Currently I am a tech lead on the Civitas platform team. I am working on architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new users quicker, and reduce cloud computing costs.}
+\end{entrylist}
+\begin{entrylist}
+\entry
+{2014-2017}
 {HomeAway}
 {Austin, Texas}
 {\emph{Senior Software Engineer} \\
-At HomeAway, I am a senior software engineer and team lead for the internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I daily deal with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, and Docker among many others. \\
+At HomeAway, I was a senior software engineer and team lead for the internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I worked with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, and Docker among many others. \\
 \begin{itemize}
 \item Architected, developed, and rolled out a new internal application based on Ruby on Rails used by all engineers to accurately capture capitalizable time
 \item Architected and developed a distributed microservice-based JSON registry used by a variety of applications across the organization
