--- a/cv_10.tex
+++ b/cv_10.tex
@@ -43,7 +43,6 @@
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
 \href{mailto:charlie@charliemeyer.net}{charlie@charliemeyer.net}
-\href{https://charliemeyer.net}{https://charliemeyer.net}
 \href{https://www.github.com/cemeyer2}{Github}
 \href{www.linkedin.com/in/cemeyer2}{LinkedIn}
 ~
@@ -71,8 +70,8 @@ professional spanish proficiency
 {2017-Present}
 {Civitas Learning}
 {Austin, Texas}
-{\emph{Staff Software Engineer} \\
-Currently I am a tech lead on the Civitas platform team. I am working on architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new users quicker, and reduce cloud computing costs.}
+{\emph{Platform Lead, Staff Software Engineer} \\
+Currently I am the tech lead for the Civitas data pipeine platform team. I am leading a team that is responsible for architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new customers quicker, and reduce cloud computing costs. In addition to understanding the techinical challenges we face, I also strive to blanance out our priorities based on the business value the team can deliver. Technologies used include the Convluent platform, Apache NiFi, Apache Atlas, and Spring boot among many others.}
 \end{entrylist}
 \begin{entrylist}
 \entry
@@ -80,7 +79,7 @@ Currently I am a tech lead on the Civitas platform team. I am working on archite
 {HomeAway}
 {Austin, Texas}
 {\emph{Senior Software Engineer} \\
-At HomeAway, I was a senior software engineer and team lead for the internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I worked with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, and Docker among many others. \\
+At HomeAway, I was a senior software engineer and team lead for the internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I worked with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, Rails, and Docker among many others. \\
 \begin{itemize}
 \item Architected, developed, and rolled out a new internal application based on Ruby on Rails used by all engineers to accurately capture capitalizable time
 \item Architected and developed a distributed microservice-based JSON registry used by a variety of applications across the organization
