--- a/cv_10.tex
+++ b/cv_10.tex
@@ -71,7 +71,7 @@ professional spanish proficiency
 {Civitas Learning}
 {Austin, Texas}
 {\emph{Platform Lead, Staff Software Engineer} \\
-Currently I am the tech lead for the Civitas data pipeine platform team. I am leading a team that is responsible for architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new customers quicker, and reduce cloud computing costs. In addition to understanding the techinical challenges we face, I also strive to blanance out our priorities based on the business value the team can deliver. Technologies used include the Convluent platform, Apache NiFi, Apache Atlas, and Spring boot among many others.}
+Currently I am the tech lead for the Civitas data pipeine platform team. I am leading a team that is responsible for architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new customers quicker, and reduce cloud computing costs. In addition to understanding the techinical challenges we face, I also strive to blanance out our priorities based on the business value the team can deliver. Technologies used include the Confluent platform, Apache NiFi, Apache Atlas, and Spring boot among many others.}
 \end{entrylist}
 \begin{entrylist}
 \entry
