--- a/cv_10.tex
+++ b/cv_10.tex
@@ -46,7 +46,7 @@
 \href{https://www.github.com/cemeyer2}{Github}
 \href{www.linkedin.com/in/cemeyer2}{LinkedIn}
 ~
-630.886.7082
+contact info available upon request
 ~
 %\emph{Please do not contact me if you work for a recruiting agency.}
 \section{tongue}
@@ -143,7 +143,7 @@ maintenance on IBM Power Systems, and develop tools to aid in performance analys
 %------------------------------------------------
 \entry
 {2010-2012}
-{Masters of Science {\normalfont computer science}}
+{Master of Science {\normalfont computer science}}
 {University of Illinois, Urbana-Champaign}
 {Specialization: Object oriented architecture and design}
 %------------------------------------------------
