--- a/cv_10.tex
+++ b/cv_10.tex
@@ -68,19 +68,20 @@ professional spanish proficiency
 \begin{entrylist}
 \entry
 {2019-Present}
-{Civitas Learning}
+{DISCO}
 {Austin, Texas}
-{\emph{Platform Lead, Senior Staff Software Engineer} \\
-Currently, I am the tech lead for the Civitas data pipeline platform team. I am leading a team that is responsible for architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new customers quicker, and reduce cloud computing costs. I am also responsible for onboarding acquisitions to the existing and next generation Civitas ETL pipelines. \\ \\
-In addition to understanding the technical challenges we face, I also strive to balance out our priorities based on the business value the team can deliver. This includes mentoring other engineers,technical project planning and scoping, and working with product management to move the business forward. \\ \\
-Technologies used include the Confluent platform, Apache NiFi, Apache Atlas, Apache Spark, Spring boot, and the AWS ecosystem among many others.}
+{\emph{Software Architect} \\
+Software Architect responsible for the DISCO backend platform.}
 \end{entrylist}
 \begin{entrylist}
 \entry
 {2017-2019}
 {Civitas Learning}
 {Austin, Texas}
-{\emph{Platform Lead, Staff Software Engineer}}
+{\emph{Platform Lead, Senior Staff Software Engineer} \\
+At Civitas, I was the tech lead for the data pipeline platform team. I was leading a team that was responsible for architecting and building out a next-generation streaming data pipeline in the higher education space to enable our consuming applications to be more real-time, scale efficiently, onboard new customers quicker, and reduce cloud computing costs. I was also responsible for onboarding acquisitions to the existing and next generation Civitas ETL pipelines. \\ \\
+In addition to understanding the technical challenges we face, I also strived to balance out our priorities based on the business value the team could deliver. This included mentoring other engineers, technical project planning and scoping, and working with product management to move the business forward. \\ \\
+Technologies used included the Confluent platform, Apache NiFi, Apache Atlas, Apache Spark, Spring boot, and the AWS ecosystem among many others.}
 \end{entrylist}
 \begin{entrylist}
 \entry
@@ -112,6 +113,24 @@ Engineer on the Cluster Aware AIX team, the backbone of the clustering capabilit
 \item Enabled unicast AIX cluster heartbeating
 \item Enabled dynamic network configuration change support across clustered systems
 \item Co-author of a clustering algorithm patent 
+\end{itemize}}
+\end{entrylist}
+%------------------------------------------------
+\begin{entrylist}
+\entry
+{2010-2012}
+{University of Illinois at Urbana-Champaign}
+{Urbana, Illinois}
+{\emph{Instructor - Department of Computer Science} \\
+Taught CS528 - Object Oriented Programming and Design. \\
+Graduate level course covering:
+\begin{itemize}
+\item Principles of object-oriented design
+\item Design patterns (Gang of Four)
+\item Use and design of frameworks
+\item Reflection
+\item Refactoring
+\item Use of unit tests as specifications
 \end{itemize}}
 \end{entrylist}
 %------------------------------------------------
