better disco desc

--- a/cv_10.tex
+++ b/cv_10.tex
@@ -71,7 +71,7 @@ professional spanish proficiency
 {DISCO}
 {Austin, Texas}
 {\emph{Software Architect} \\
-Software Architect responsible for the DISCO backend platform.}
+At Disco, I am a Software Architect responsible for the DISCO document ingest pipeline. I focus the majority of my time around architecting and developing a serverless pipeline for high-speed parallel document ingest including file typing, conversion, OCR, and translation.}
 \end{entrylist}
 \begin{entrylist}
 \entry
