--- a/cv_10.tex
+++ b/cv_10.tex
@@ -67,11 +67,19 @@ professional spanish proficiency
 %------------------------------------------------
 \begin{entrylist}
 \entry
-{2019-Present}
+{2020-present}
+{DISCO}
+{Austin, Texas}
+{\emph{Senior Software Architect} \\
+Rolling out an enterprise communication fabric utilizing Apache Kafka and other transit technologies to reduce development time, increase velocity, and reduce costs across the DISCO platform.}
+\end{entrylist}
+\begin{entrylist}
+\entry
+{2019-2020}
 {DISCO}
 {Austin, Texas}
 {\emph{Software Architect} \\
-At Disco, I am a Software Architect responsible for the DISCO document ingest pipeline. I focus the majority of my time around architecting and developing a serverless pipeline for high-speed parallel document ingest including file typing, conversion, OCR, and translation.}
+Software Architect responsible for the DISCO document ingest pipeline. I focus the majority of my time around architecting and developing a serverless pipeline for high-speed parallel document ingest including file typing, conversion, OCR, and translation.}
 \end{entrylist}
 \begin{entrylist}
 \entry
