--- a/cv_10.tex
+++ b/cv_10.tex
@@ -67,7 +67,15 @@ professional spanish proficiency
 %------------------------------------------------
 \begin{entrylist}
 \entry
-{2020-present}
+{2022-present}
+{data.world}
+{Austin, Texas}
+{\emph{Principal Software Engineer} \\
+}
+\end{entrylist}
+\begin{entrylist}
+\entry
+{2020-2022}
 {DISCO}
 {Austin, Texas}
 {\emph{Senior Software Architect} \\
