--- a/cv_10.tex
+++ b/cv_10.tex
@@ -71,6 +71,11 @@ professional spanish proficiency
 {data.world}
 {Austin, Texas}
 {\emph{Principal Software Engineer} \\
+\begin{itemize}
+\item Architected and rolled out a pipeline capturing and delivering audit event records
+\item Reduced AWS spend by 30\%
+\item Architected and built functionality to allow data.world to harvest customer metadata from the cloud 
+\end{itemize}
 }
 \end{entrylist}
 \begin{entrylist}
