--- a/cv_10.tex
+++ b/cv_10.tex
@@ -67,13 +67,22 @@ professional spanish proficiency
 %------------------------------------------------
 \begin{entrylist}
 \entry
-{2022-present}
+{2025-present}
+{ServiceNow}
+{Dripping Springs, Texas}
+{\emph{Senior Staff Software Engineer} \\
+ServiceNow acquired data.world July 2025.
+}
+\end{entrylist}
+\begin{entrylist}
+\entry
+{2022-2025}
 {data.world}
-{Austin, Texas}
+{Dripping Springs, Texas}
 {\emph{Principal Software Engineer} \\
+Prinical Engineer focused on backend platform
 \begin{itemize}
 \item Architected and rolled out a pipeline capturing and delivering audit event records
-\item Reduced AWS spend by 30\%
 \item Architected and built functionality to allow data.world to harvest customer metadata from the cloud 
 \end{itemize}
 }
@@ -82,7 +91,7 @@ professional spanish proficiency
 \entry
 {2020-2022}
 {DISCO}
-{Austin, Texas}
+{Dripping Springs, Texas}
 {\emph{Senior Software Architect} \\
 Rolling out an enterprise communication fabric utilizing Apache Kafka and other transit technologies to reduce development time, increase velocity, and reduce costs across the DISCO platform.}
 \end{entrylist}
@@ -90,7 +99,7 @@ Rolling out an enterprise communication fabric utilizing Apache Kafka and other 
 \entry
 {2019-2020}
 {DISCO}
-{Austin, Texas}
+{Dripping Springs, Texas}
 {\emph{Software Architect} \\
 Software Architect responsible for the DISCO document ingest pipeline. I focus the majority of my time around architecting and developing a serverless pipeline for high-speed parallel document ingest including file typing, conversion, OCR, and translation.}
 \end{entrylist}
