--- a/cv_10.tex
+++ b/cv_10.tex
@@ -54,9 +54,9 @@ native english,
 professional spanish proficiency
 \end{aside}
 
-\section{objective}
+\section{professional summary}
 
-\textbf{To obtain} a full time position in the software engineering field at a dynamic high tech company.
+Principal Engineer and Software Architect with 15+ years of experience designing scalable systems and leading high-performing engineering teams. Proven track record of delivering enterprise-grade solutions across data pipelines, cloud infrastructure, and distributed systems. Expert in mentoring engineers, driving technical strategy, and translating business requirements into robust software architectures.
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -80,7 +80,7 @@ ServiceNow acquired data.world July 2025.
 {data.world}
 {Dripping Springs, Texas}
 {\emph{Principal Software Engineer} \\
-Prinical Engineer focused on backend platform
+Principal Engineer focused on backend platform
 \begin{itemize}
 \item Architected and rolled out a pipeline capturing and delivering audit event records
 \item Architected and built functionality to allow data.world to harvest customer metadata from the cloud 
@@ -93,7 +93,7 @@ Prinical Engineer focused on backend platform
 {DISCO}
 {Dripping Springs, Texas}
 {\emph{Senior Software Architect} \\
-Rolling out an enterprise communication fabric utilizing Apache Kafka and other transit technologies to reduce development time, increase velocity, and reduce costs across the DISCO platform.}
+Rolled out an enterprise communication fabric utilizing Apache Kafka and other transit technologies to reduce development time, increase velocity, and reduce costs across the DISCO platform.}
 \end{entrylist}
 \begin{entrylist}
 \entry
@@ -101,7 +101,7 @@ Rolling out an enterprise communication fabric utilizing Apache Kafka and other 
 {DISCO}
 {Dripping Springs, Texas}
 {\emph{Software Architect} \\
-Software Architect responsible for the DISCO document ingest pipeline. I focus the majority of my time around architecting and developing a serverless pipeline for high-speed parallel document ingest including file typing, conversion, OCR, and translation.}
+Software Architect responsible for the DISCO document ingest pipeline. Focused the majority of my time around architecting and developing a serverless pipeline for high-speed parallel document ingest including file typing, conversion, OCR, and translation.}
 \end{entrylist}
 \begin{entrylist}
 \entry
@@ -136,7 +136,7 @@ At HomeAway, I was a senior software engineer and team lead for the internal too
 {IBM}
 {Austin, Texas}
 {\emph{Staff Software Engineer} \\
-Engineer on the Cluster Aware AIX team, the backbone of the clustering capabilities of the IBM enterprise grade UNIX operating system.I led the effort to maintain, refactor, and enhance the AIX cluster communications daemon. \\
+Engineer on the Cluster Aware AIX team, the backbone of the clustering capabilities of the IBM enterprise grade UNIX operating system. I led the effort to maintain, refactor, and enhance the AIX cluster communications daemon. \\
 \begin{itemize}
 \item Led the AIX effort to certify Oracle Real Application Clusters database on PowerHA
 \item Enhanced AIX clustering to scale to 32 nodes and 1024 disks per node, including parallelization of core clustering libraries
@@ -179,8 +179,7 @@ Architected and developed an automated functional test suite composed of approxi
 {IBM}
 {Rochester, Minnesota}
 {\emph{Power Systems Performance Co-op} \\
-Worked as a member of a team to benchmark systems, analyze performance data, develop workloads, perform
-maintenance on IBM Power Systems, and develop tools to aid in performance analysis. }
+Worked as a member of a team to benchmark systems, analyze performance data, develop workloads, perform maintenance on IBM Power Systems, and develop tools to aid in performance analysis. }
 \end{entrylist}
 %-----------------------------------------------
 
